--- a/owncloudApp/src/main/res/values-el/strings.xml
+++ b/owncloudApp/src/main/res/values-el/strings.xml
@@ -2,6 +2,7 @@
 <resources>
   <string name="about_android">%1$s για Android</string>
   <string name="about_version">Έκδοση %1$s</string>
+  <string name="actionbar_search">Αναζήτηση σε αυτό το φάκελο</string>
   <string name="actionbar_sync">Ανανέωση λογαριασμού</string>
   <string name="actionbar_upload">Μεταφόρτωση</string>
   <string name="actionbar_upload_from_apps">Περιεχόμενο από άλλες εφαρμογές</string>
@@ -407,6 +408,8 @@
   <string name="share_via_link_expiration_date_label">Λήξη</string>
   <string name="share_via_link_password_label">Συνθηματικό</string>
   <string name="share_via_link_password_title">Ασφαλίστηκε</string>
+  <string name="share_via_link_edit_permission_read_only_label">Λήψη / Προβολή</string>
+  <string name="share_via_link_edit_permission_read_and_write_label">Λήψη / Προβολή / Μεταφόρτωση</string>
   <string name="share_get_public_link_button">Λήψη συνδέσμου</string>
   <string name="share_with_title">Διαμοιρασμός με</string>
   <string name="share_with_edit_title">Διαμοιρασμός με %1$s</string>
