--- a/owncloudApp/src/main/res/values-pl/strings.xml
+++ b/owncloudApp/src/main/res/values-pl/strings.xml
@@ -38,6 +38,7 @@
   <string name="prefs_passcode">Blokada hasłem</string>
   <string name="prefs_fingerprint">Blokada odciskiem palca</string>
   <string name="prefs_fingerprint_summary">Wprowadź kod PIN lub wzór odblokowania aby odblokować tę opcję</string>
+  <string name="confirmation_touches_with_other_windows_title">Czy jesteś pewny, że chcesz włączyć tą funkcję?</string>
   <string name="prefs_camera_picture_upload">Wrzucanie obrazków</string>
   <string name="prefs_camera_picture_upload_summary">Automatycznie wrzuć obrazki zrobione przez kamerę</string>
   <string name="prefs_camera_video_upload">Wrzucanie filmów</string>
@@ -93,6 +94,7 @@
   <string name="uploader_error_message_source_file_not_copied">Wystąpił błąd podczas kopiowania pliku do folderu tymczasowego. Proszę spróbować go przesłać ponownie.</string>
   <string name="file_list_seconds_ago">sekund temu</string>
   <string name="file_list_empty">Pusto. Wyślij coś!</string>
+  <string name="file_list_empty_available_offline">Nie ma plików dostępnych offline.</string>
   <string name="file_list_loading">Wczytywanie...</string>
   <string name="file_list_no_app_for_file_type">Nie znaleziono aplikacji dla tego rodzaju pliku</string>
   <string name="local_file_list_empty">Nie ma plików w tym folderze.</string>
@@ -132,7 +134,9 @@
   <string name="change_password">Zmień hasło</string>
   <string name="delete_account">Usuń konto</string>
   <string name="create_account">Utwórz konto</string>
+  <string name="upload_chooser_title">Wyślij plik z …</string>
   <string name="uploader_info_dirname">Nazwa folderu</string>
+  <string name="uploader_upload_in_progress_ticker">Wysyłam…</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Wysyłanie %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Wysyłanie zakończone powodzeniem</string>
   <string name="uploader_upload_succeeded_content_single">Wysłano %1$s</string>
